<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>fr.cea.nabla</groupId>
		<artifactId>nabla-parent</artifactId>
		<version>0.3.2-SNAPSHOT</version>
	</parent>
	<artifactId>nabla</artifactId>
	<profiles>
		<profile>
			<id>jdk11-graalvm</id>
			<activation>
				<jdk>[11,</jdk>
			</activation>
			<properties>
				<jar.dir>${project.build.directory}/jars</jar.dir>
				<test.argLine>--upgrade-module-path='${jar.dir}/truffle-api.jar'
					--add-opens org.graalvm.sdk/org.graalvm.polyglot=ALL-UNNAMED
					--add-exports java.base/jdk.internal.module=ALL-UNNAMED</test.argLine>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>2.10</version>
						<executions>
							<execution>
								<id>copy</id>
								<phase>process-test-classes</phase>
								<goals>
									<goal>copy</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.graalvm.truffle</groupId>
											<artifactId>truffle-api</artifactId>
											<version>20.1.0</version>
											<type>jar</type>
											<overWrite>true</overWrite>
											<destFileName>truffle-api.jar</destFileName>
										</artifactItem>
									</artifactItems>
									<outputDirectory>${jar.dir}</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>jdk8-graalvm</id>
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<properties>
				<test.argLine>-XX:-UseJVMCIClassLoader</test.argLine>
			</properties>
		</profile>
	</profiles>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<includes>
						<include>**/*TestSuite.java</include>
						<include>**/*Test.java</include>
					</includes>
					<argLine>-Dgraalvm.locatorDisabled=true ${test.argLine}</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>nabla</finalName>
							<artifactSet>
								<excludes>
									<exclude>junit:junit</exclude>
									<exclude>org.graalvm.truffle:truffle-api</exclude>
									<exclude>org.graalvm.truffle:truffle-dsl-processor</exclude>
									<exclude>org.graalvm.truffle:truffle-tck</exclude>
									<exclude>org.graalvm:graal-sdk</exclude>
								</excludes>
							</artifactSet>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<useIncrementalCompilation>false</useIncrementalCompilation>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-api</artifactId>
			<version>20.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-dsl-processor</artifactId>
			<version>20.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.graalvm.truffle</groupId>
			<artifactId>truffle-tck</artifactId>
			<version>20.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.7</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>org.eclipse.xtext.xbase</artifactId>
			<version>2.21.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>org.eclipse.xtext.testing</artifactId>
			<version>2.21.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.ecore</artifactId>
			<version>2.21.0</version>
		</dependency>
		<dependency>
			<groupId>fr.cea.nabla</groupId>
			<artifactId>fr.cea.nabla</artifactId>
			<version>${nablab.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.cea.nabla</groupId>
			<artifactId>fr.cea.nabla.ir</artifactId>
			<version>${nablab.version}</version>
		</dependency>
		<dependency>
			<groupId>fr.cea.nabla</groupId>
			<artifactId>fr.cea.nabla.javalib</artifactId>
			<version>${nablab.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core</artifactId>
			<version>1.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
	</dependencies>
</project>
